<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddingActivity">

    <TextView
            android:text="@string/first_name"
            android:layout_width="93dp"
            android:layout_height="27dp" android:id="@+id/textView3"
            android:textSize="18sp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.018"
            app:layout_constraintVertical_bias="0.302"/>
    <TextView
            android:text="@string/Address"
            android:layout_width="79dp"
            android:layout_height="35dp" android:id="@+id/address"
            android:textSize="18sp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.018"
            app:layout_constraintVertical_bias="0.658"/>
    <TextView
            android:text="@string/last_name"
            android:layout_width="95dp"
            android:layout_height="31dp" android:id="@+id/textView6"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.018" app:layout_constraintVertical_bias="0.415"/>
    <Button
            android:id="@+id/button_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.897" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.961"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/fNameInput"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.3" android:hint="@string/fname_hint"
            app:layout_constraintHorizontal_bias="0.54" tools:text="it"/>
    <EditText
            android:layout_width="213dp"
            android:layout_height="39dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/lNameInput"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.42"
            android:hint="@string/lName_hint" app:layout_constraintHorizontal_bias="0.54" android:text="works"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/pNumberInput"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.656" app:layout_constraintVertical_bias="0.53"
            android:hint="@string/pNumber_hint" android:text="here"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/addressInput"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_bias="0.653"
            app:layout_constraintHorizontal_bias="0.449" android:hint="@string/address_hint" android:text="and"/>
    <TextView
            android:text="@string/new_address"
            android:layout_width="196dp"
            android:layout_height="42dp" android:id="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintVertical_bias="0.185" android:textSize="30sp" android:lineSpacingExtra="12sp"/>
    <TextView
            android:text="@string/phone_number"
            android:layout_width="130dp"
            android:layout_height="21dp" android:id="@+id/textView2"
            android:textSize="18sp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.528"/>
</androidx.constraintlayout.widget.ConstraintLayout>